# eduatalk

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_MESSAGE_PHASE3-3.txt  CONTENTS_DATABASE_DESIGN_ANALYSIS.md  CONTENTS_FORM_DB_ANALYSIS.md  CONTENTS_NEXT_STEPS.md  CONTENTS_REFACTORING_ANALYSIS.md  CONTENTS_SEPARATION_SUMMARY.md  README.md  REFACTORING_ANALYSIS.md  RELEASE_NOTES.md  STUDENT_CONTENT_FIELDS_UPDATE.md  chat-domain.repomix.xml  chat.repomix  eslint.config.mjs  fix-migration-history.ps1  instrumentation.ts  middleware.ts  next.config.ts  notification-domain.repomix.xml  package-lock.json  package.json  plan-llm-domain.repomix.xml  playwright.config.ts  pnpm-lock.yaml  proxy.ts  repomix-phase1-infrastructure.xml  repomix-phase2-utils.xml  repomix-phase3-student-core.xml  repomix-phase4-student-extended.xml  repomix-phase5-admin.xml  repomix-phase6-others.xml  repomix.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vercel.json  (+5 more)
.serena/: project.yml
__tests__/: planValidation.test.ts
python/: Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
python/notebooks/: learning_pattern_analysis.ipynb  score_trend_analysis.ipynb
python/src/: __init__.py  analysis.py  config.py  db_connector.py
python/src/api/: __init__.py  main.py
python/src/api/routes/: __init__.py  analysis.py  predictions.py  recommendations.py
python/src/ml/: __init__.py  content_recommender.py  score_predictor.py
python/tests/: test_api.py  test_content_recommender.py  test_score_predictor.py
(+7923 files in other folders)
