[project]
name = "timelevelup-analysis"
version = "0.1.0"
description = "TimeLevelUp 학습 데이터 분석 및 ML 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Database
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.9",

    # Data Analysis
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "httpx>=0.26.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
